feat: Improve text on slides

--- a/flight_data_slide_deck.ipynb
+++ b/flight_data_slide_deck.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "## Dataset Overview\n",
     "\n",
-    "Our data set contained 7,009,177 rows and 20 columns with flight arrival and departure details for commercial flights within the United States, including whether or not the flights were cancelled or delayed and what the reason was. It spans from January through December 2008. The data was obtained from the [American Statistical Society](https://community.amstat.org/jointscsg-section/dataexpo/dataexpo2009)."
+    "Our data set contained 7,009,177 rows and 20 columns of flight arrival and departure details for commercial flights within the United States, including whether or not the flights were cancelled or delayed and what the reason was. It spanned from January through December 2008. The data was obtained from the [American Statistical Society](https://community.amstat.org/jointscsg-section/dataexpo/dataexpo2009)."
    ]
   },
   {
@@ -98,8 +98,8 @@
     "- Cancellations make up a small percentage of flights (1.96%)\n",
     "- Diversions are even rarer (0.24%)\n",
     "- Delays are unfortunately quite common (21.75%)\n",
-    "- Still more than three quarters of flights are on-time (defined as no more than 15 minutes late)\n",
-    "- Because of dataset contains information about the causes of cancellations and delays, but not diversions, we will focus our analysis on avoiding the first two.\n"
+    "- Still, more than 3/4 flights are on-time (defined as no more than 15 minutes late)\n",
+    "- Because our dataset contains information about the causes of cancellations and delays, but not diversions, we will focus our analysis on avoiding the first two.\n"
    ]
   },
   {
@@ -161,7 +161,7 @@
    },
    "source": [
     "## What is causing all of these delays?\n",
-    "- In terms of the raw counts of each delay type, National Aviation System (NAS) delays are the most common, with almost equal amounts of late aircraft and carrier delays. Security delays are relatively rare.\n",
+    "- National Aviation System (NAS) delays are the most common. Late aircraft and carrier delays are virtually tied for second place. Security delays are relatively rare.\n",
     "- However, late aircraft result in the most the most delay hours in total across all flights.\n",
     "- Even though there are comparatively few weather delays in total, they take the longest on average when compared to the other types. Both weather and late aircraft delays take on average more than 40 minutes, while security delays take the least average amount of time (less than 20 minutes)."
    ]
@@ -341,7 +341,7 @@
    },
    "source": [
     "### Avoiding cancellations by season\n",
-    "It may seem obvious, but if possible avoid flying during the winter months if you're worried about cancellations. They are proportionally higher in January, February, March and December.\n"
+    "It may seem obvious, but if you're worried about cancellations, avoid flying during the winter months. They are proportionally higher in January, February, March and December.\n"
    ]
   },
   {
@@ -439,7 +439,7 @@
    },
    "source": [
     "### What is the best day and time to avoid cancellations?\n",
-    "- In our dataset flights departing in the 1am hour on Mondays see the highest percentage of cancellations. \n",
+    "- In our dataset, flights departing in the 1am hour on Mondays see the highest percentage of cancellations. \n",
     "- By contrast, flights leaving in the 2am hour Wednesdays through Fridays and flights leaving between 3am and 5am on Tuesday had virtually no cancellations.\n",
     "- BUT we need to be cautious. Given the relatively low number of flights that occur at these hours, our results could potentially vary greatly from year to year. \n",
     "- One very important thing to note is the relatively high percentage of cancellations on Tuesday and Friday evenings when the volume of flights is significantly higher."
@@ -502,7 +502,7 @@
    "source": [
     "### What is the best day and time to avoid delays?\n",
     "- Departures in the 4am hour on Thursdays are on average a whopping 182 minutes late on arrival.\n",
-    "- BUT given that there are relatively few flights at this time (only 11 in total!), a couple of big delays of over 400 minutes looks like it skewed our results.\n",
+    "- BUT given that there are relatively few flights at this time (only 11 in total!), a couple of big delays of over 400 minutes look like they skewed our results.\n",
     "- The important take away is that there's not a lot of variation in official arrival delays in general across day and time, with the exception of the early morning hours."
    ]
   },
@@ -560,8 +560,8 @@
    "source": [
     "### When is the best day and time to fly for an on-time arrival?\n",
     "- Based on this dataset, if you want to arrive to your destination early, the best time to fly is on Tuesdays at around 4am. (The caveats above apply.)\n",
-    "- Again, there is a lot of variation in the early morning hours and this may due to the fact that there are relatively few fights at these hours, which leave them susceptible to skewing.\n",
-    "- In general, however, the most early and on-time arrivals to tend to occur in the morning hours.\n",
+    "- Again, there is a lot of variation in the early morning hours. This may due to the fact that there are relatively few fights at these hours, which leave them susceptible to skewing.\n",
+    "- In general, however, early and on-time arrivals to tend to occur in the morning hours.\n",
     "- Friday, Sunday and Thursday evenings show the biggest delays (positive differences between actual and scheduled arrival times.) "
    ]
   },
@@ -614,7 +614,7 @@
     }
    },
    "source": [
-    "### What airports have the most cancellations?\n",
+    "### Which airports have the most cancellations?\n",
     "- Small or regional airports tend to have a higher percentage of cancellations."
    ]
   },
@@ -665,7 +665,7 @@
     }
    },
    "source": [
-    "### What airports have the most delays?\n",
+    "### Which airports have the most delays?\n",
     "- Pueblo, Colorado (PUB) tops the list, but that airport only had two flights!\n",
     "- In general, though, small or regional airports tend to have a higher percentage delays.\n",
     "- Newark (EWR) was the top large airport in the list. Miami, Chicago O'Hare, New York JFK, and New York LaGuarida are also in the list."
@@ -718,11 +718,11 @@
     }
    },
    "source": [
-    "### What airline had the most cancellations?\n",
+    "### Which airline had the most cancellations?\n",
     "- Smaller regional airlines Envoy Air (MQ) and Mesa Airlines (YV) had the largest proportion of cancellations. \n",
     "- Large airlines such as American (AA) and United (UA) were in the top half. \n",
     "- Discount airline Southwest (WN) and the former major airline Northwest (NW) were in the bottom third. \n",
-    "- Smaller regional carrier Frontier (F9) had the fewest proportion of cancellations."
+    "- Smaller regional carrier Frontier (F9) had the lowest proportion of cancellations."
    ]
   },
   {
@@ -773,7 +773,7 @@
     }
    },
    "source": [
-    "### What airline had the most delays?\n",
+    "### Which airline had the most delays?\n",
     "- American airlines tops the list with more than a quarter of their flights being delayed!\n",
     "- United is the next large carrier on the list with approximately 25% delayed flights.\n",
     "- Small carrier 9 Air Company (AQ) had the lowest percentage of delays (5%)."
@@ -886,7 +886,7 @@
    },
    "source": [
     "### Next Steps\n",
-    "We should continue this analysis on a larger set. This will especially help us better analyze some of the patterns we saw at flight times with a relatively low volume of flights, i.e. early mornings."
+    "We should continue this analysis on a larger, more recent set. This will be especially helpful for analyzing some of the patterns we saw at flight times with a relatively low volume of flights, i.e. early mornings."
    ]
   },
   {
@@ -905,7 +905,7 @@
      "text": [
       "[NbConvertApp] WARNING | Config option `kernel_spec_manager_class` not recognized by `NbConvertApp`.\n",
       "[NbConvertApp] Converting notebook flight_data_slide_deck.ipynb to slides\n",
-      "[NbConvertApp] Writing 1327362 bytes to flight_data_slide_deck.slides.html\n",
+      "[NbConvertApp] Writing 1327316 bytes to flight_data_slide_deck.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.5.0\n",
       "Serving your slides at http://127.0.0.1:8000/flight_data_slide_deck.slides.html\n",
       "Use Control-C to stop this server\n"
